# test-python-devcontainer

./: .env.example  .gitignore  README.md  SETUP_POSTGRESQL.md  __init__.py  check_status.py  database.py  docker-compose.yml  env_example  gpt5_nano_agent.py  init_complete.py  init_db.py  main.py  memory.py  pyproject.toml  setup_env.py  test.py  tools.py  vector_store.py
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/init-scripts/: 01-init.sql
configs/: data_split.yaml  features.yaml
src/features/: rolling_features.py
src/preprocessing/: agg_by_client.py  agg_by_day.py
