[project]
name = "myproject"
version = "0.1.0"
description = "Proyecto Python base"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.3.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.16.0",
  "ruff>=0.11.13",
  "black>=25.1.0",
]

ds = [
  "matplotlib>=3.10.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 119
target-version = ["py311"]

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

per-file-ignores = { "__init__.py" = ["F401"] }

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
