[project]
name = "myproject"
version = "0.1.0"
description = "Python base project"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.3.0,<3.0.0",
  "numpy>=1.24.0,<2.0.0",
  "pyyaml>=6.0.0,<7.0.0",
  "fastapi>=0.116.1",
  "pydantic>=2.0.0,<3.0.0",
  "uvicorn>=0.35.0",
  "httpx>=0.28.1",
  "sqlalchemy>=2.0.43",
  "alembic>=1.16.4",
  "psycopg2-binary>=2.9.10",
  "langchain>=0.1.0",
  "langchain-openai>=0.1.0",
  "python-dotenv>=1.0.0",
  "pgvector>=0.3.6",
  "langchain-postgres>=0.0.15",
  "langchain-community>=0.3.21",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.16.0",
  "ruff>=0.11.13",
  "black>=25.1.0",
]

ds = [
  "matplotlib>=3.10.3,<4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 119
target-version = ["py311"]

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D"]
per-file-ignores = { "__init__.py" = ["F401", "D104"], "tests/**" = ["D"] }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
